test/libsolidity/syntaxTests/dataLocations/internalFunction/internal_function_return_parameters_no_data_location.sol
contract C {
    function g() internal pure returns(uint[]) {}
}
// ----
// TypeError: (52-58): Storage location must be one of: "storage", "memory" for parameter in internal function, but none was given.
